cmake_minimum_required(VERSION 3.0.0)
project(AdventOfCode VERSION 0.1.0)

include(CTest)
enable_testing()

include_directories("./include/")

add_executable(day1 day1.cpp)
add_executable(day2 day2.cpp)
add_executable(day3 day3.cpp)
add_executable(day4 day4.cpp)
add_executable(day5 day5.cpp)
add_executable(day6 day6.cpp)
add_executable(day7 day7.cpp)
add_executable(day8 day8.cpp)
add_executable(day9 day9.cpp)
add_executable(day10 day10.cpp)
add_executable(day11 day11.cpp)
add_executable(day12 day12.cpp)
add_executable(day13 day13.cpp)
add_executable(day14 day14.cpp)
add_executable(day15 day15.cpp)
add_executable(day16 day16.cpp)
add_executable(day17 day17.cpp)
add_executable(day18 day18.cpp)
add_executable(day19 day19.cpp)

set_property(TARGET day1 PROPERTY CXX_STANDARD 20)
set_property(TARGET day2 PROPERTY CXX_STANDARD 20)
set_property(TARGET day3 PROPERTY CXX_STANDARD 20)
set_property(TARGET day4 PROPERTY CXX_STANDARD 20)
set_property(TARGET day5 PROPERTY CXX_STANDARD 20)
set_property(TARGET day6 PROPERTY CXX_STANDARD 20)
set_property(TARGET day7 PROPERTY CXX_STANDARD 20)
set_property(TARGET day8 PROPERTY CXX_STANDARD 20)
set_property(TARGET day9 PROPERTY CXX_STANDARD 20)
set_property(TARGET day10 PROPERTY CXX_STANDARD 20)
set_property(TARGET day11 PROPERTY CXX_STANDARD 20)
set_property(TARGET day12 PROPERTY CXX_STANDARD 20)
set_property(TARGET day13 PROPERTY CXX_STANDARD 20)
set_property(TARGET day14 PROPERTY CXX_STANDARD 20)
set_property(TARGET day15 PROPERTY CXX_STANDARD 20)
set_property(TARGET day16 PROPERTY CXX_STANDARD 20)
set_property(TARGET day17 PROPERTY CXX_STANDARD 20)
set_property(TARGET day18 PROPERTY CXX_STANDARD 20)
set_property(TARGET day19 PROPERTY CXX_STANDARD 20)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
