add_executable(day1_20 day1/day1.cpp)
add_executable(day2_20 day2/day2.cpp)
add_executable(day3_20 day3/day3.cpp)
add_executable(day4_20 day4/day4.cpp)
add_executable(day5_20 day5/day5.cpp)
add_executable(day6_20 day6/day6.cpp)
add_executable(day7_20 day7/day7.cpp)
add_executable(day8_20 day8/day8.cpp)
add_executable(day9_20 day9/day9.cpp)
add_executable(day10_20 day10/day10.cpp)
add_executable(day11_20 day11/day11.cpp)
add_executable(day12_20 day12/day12.cpp)
add_executable(day13_20 day13/day13.cpp)
add_executable(day14_20 day14/day14.cpp)
add_executable(day15_20 day15/day15.cpp)
add_executable(day16_20 day16/day16.cpp)
add_executable(day17_20 day17/day17.cpp)
add_executable(day18_20 day18/day18.cpp)
add_executable(day19_20 day19/day19.cpp)
add_executable(day20_20 day20/day20.cpp)
add_executable(day21_20 day21/day21.cpp)
add_executable(day22_20 day22/day22.cpp)
add_executable(day23_20 day23/day23.cpp)
add_executable(day24_20 day24/day24.cpp)
add_executable(day25_20 day25/day25.cpp)